--- a/heatqueation2d.ipynb
+++ b/heatqueation2d.ipynb
@@ -1,98 +1,127 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "# notes\n",
-    "* Set up the GPU for OpenCL and create a GPU Context "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
+  "cells": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Populating the interactive namespace from numpy and matplotlib\n"
-     ]
+      "cell_type": "markdown",
+      "metadata": {
+        "collapsed": true,
+        "id": "5d0278jw51NR"
+      },
+      "source": [
+        "# notes\n",
+        "* Set up the GPU for OpenCL and create a GPU Context "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "2CJPiFVO51NV",
+        "outputId": "ec8989ab-9321-4c84-d76d-ae65232338bf"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Populating the interactive namespace from numpy and matplotlib\n"
+          ]
+        }
+      ],
+      "source": [
+        "#Lets have matplotlib \"inline\"\n",
+        "%pylab inline\n",
+        "\n",
+        "#Lets have opencl ipython integration enabled\n",
+        "%load_ext pyopencl.ipython_ext\n",
+        "\n",
+        "#Import packages we need\n",
+        "import numpy as np\n",
+        "import pyopencl as cl\n",
+        "\n",
+        "#Make sure we get compiler output from OpenCL\n",
+        "import os\n",
+        "os.environ[\"PYOPENCL_COMPILER_OUTPUT\"] = \"1\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "id": "IvSCrCPF51NZ"
+      },
+      "outputs": [],
+      "source": [
+        "#Create OpenCL context\n",
+        "cl_ctx = cl.create_some_context()\n",
+        "\n",
+        "#Create an OpenCL command queue\n",
+        "cl_queue = cl.CommandQueue(cl_ctx)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8TWpuKc151Na"
+      },
+      "source": [
+        "# notes\n",
+        "* Make a GPU kernel for 2d heat equation"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "collapsed": true,
+        "id": "1Wj2jrWS51Nb"
+      },
+      "outputs": [],
+      "source": [
+        "__kernel void heat_eq_2D(__global float *u1, __global const float *u0,\n",
+        "float kappa, float dt, float dx, float dy) {\n",
+        "//Get total number of cells\n",
+        "int nx = get_global_size(0);\n",
+        "int ny = get_global_size(1);\n",
+        "int i = ???; int j = ???;\n",
+        "//Calculate the four indices of our neighboring cells\n",
+        "int center = j*nx + i;\n",
+        "int north = (j+1)*nx + i; int south = ??? int east = ??? int west = ???\n",
+        "//Internal cells\n",
+        "if (i > 0 && i < nx-1 && j > 0 && j <ny-1) {\n",
+        "u1[center] = u0[center] + ???\n",
+        "}\n",
+        "//Boundary conditions (ghost cells)\n",
+        "else {\n",
+        "u1[center] = u0[center];\n",
+        "}\n",
+        "}"
+      ]
     }
-   ],
-   "source": [
-    "#Lets have matplotlib \"inline\"\n",
-    "%pylab inline\n",
-    "\n",
-    "#Lets have opencl ipython integration enabled\n",
-    "%load_ext pyopencl.ipython_ext\n",
-    "\n",
-    "#Import packages we need\n",
-    "import numpy as np\n",
-    "import pyopencl as cl\n",
-    "\n",
-    "#Make sure we get compiler output from OpenCL\n",
-    "import os\n",
-    "os.environ[\"PYOPENCL_COMPILER_OUTPUT\"] = \"1\""
-   ]
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 2",
+      "language": "python",
+      "name": "python2"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 2
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython2",
+      "version": "2.7.6"
+    },
+    "colab": {
+      "name": "heatqueation2d.ipynb",
+      "provenance": []
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#Create OpenCL context\n",
-    "cl_ctx = cl.create_some_context()\n",
-    "\n",
-    "#Create an OpenCL command queue\n",
-    "cl_queue = cl.CommandQueue(cl_ctx)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# notes\n",
-    "* Make a GPU kernel for 2d heat equation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 2",
-   "language": "python",
-   "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 0
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
